nginxpod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginxdep
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginxapp
          image: frontend:latest
          ports:
            - containerPort: 80
          imagePullPolicy: Never
