node-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-backend
spec:
  selector:
    app: node-backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
